--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,25 +7,79 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>600</height>
+    <height>800</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>1000</width>
-    <height>600</height>
+    <height>800</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>1000</width>
-    <height>600</height>
+    <height>800</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string extracomment="Amazon Game">亚马逊棋</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QPushButton" name="btnPrevStep">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>160</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>悔棋</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnNextStep">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>210</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>后移</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>0</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;对弈信息&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnClearMsg">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>540</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>清空信息</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
@@ -35,8 +89,98 @@
      <height>28</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuGame">
+    <property name="title">
+     <string>游戏</string>
+    </property>
+    <addaction name="actionBegin"/>
+    <addaction name="actionEndGame"/>
+   </widget>
+   <widget class="QMenu" name="menuSetting">
+    <property name="title">
+     <string>设置</string>
+    </property>
+    <widget class="QMenu" name="menu_4">
+     <property name="title">
+      <string>人人模式</string>
+     </property>
+     <addaction name="actionBlackFirst"/>
+     <addaction name="actionWhiteFirst"/>
+    </widget>
+    <widget class="QMenu" name="menu_5">
+     <property name="title">
+      <string>人机模式</string>
+     </property>
+     <addaction name="actionPersonFirst"/>
+     <addaction name="actionComputerFirst"/>
+    </widget>
+    <addaction name="menu_4"/>
+    <addaction name="menu_5"/>
+    <addaction name="actionOnline"/>
+    <addaction name="separator"/>
+    <addaction name="actionAI"/>
+   </widget>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>关于</string>
+    </property>
+    <addaction name="actionHelp"/>
+    <addaction name="actionAboutAuthor"/>
+   </widget>
+   <addaction name="menuGame"/>
+   <addaction name="menuSetting"/>
+   <addaction name="menu"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionBegin">
+   <property name="text">
+    <string>开始</string>
+   </property>
+  </action>
+  <action name="actionEndGame">
+   <property name="text">
+    <string>结束本局</string>
+   </property>
+  </action>
+  <action name="actionWhiteFirst">
+   <property name="text">
+    <string>白方先手</string>
+   </property>
+  </action>
+  <action name="actionPersonFirst">
+   <property name="text">
+    <string>人先手</string>
+   </property>
+  </action>
+  <action name="actionComputerFirst">
+   <property name="text">
+    <string>计算机先手</string>
+   </property>
+  </action>
+  <action name="actionOnline">
+   <property name="text">
+    <string>联网模式</string>
+   </property>
+  </action>
+  <action name="actionHelp">
+   <property name="text">
+    <string>帮助</string>
+   </property>
+  </action>
+  <action name="actionAboutAuthor">
+   <property name="text">
+    <string>关于作者</string>
+   </property>
+  </action>
+  <action name="actionAI">
+   <property name="text">
+    <string>AI引擎设置</string>
+   </property>
+  </action>
+  <action name="actionBlackFirst">
+   <property name="text">
+    <string>黑方先手</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
