添加MCRave引擎的算法，并且在界面上进行相关的显示。并未进行MCRave引擎的测试。

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -119,6 +119,7 @@
       <string>AI引擎选择</string>
      </property>
      <addaction name="actionTestEngine"/>
+     <addaction name="actionMCRave"/>
     </widget>
     <addaction name="menuPVPOrder"/>
     <addaction name="menuPVCOrder"/>
@@ -185,6 +186,11 @@
   <action name="actionTestEngine">
    <property name="text">
     <string>TestEngine</string>
+   </property>
+  </action>
+  <action name="actionMCRave">
+   <property name="text">
+    <string>MCRave</string>
    </property>
   </action>
  </widget>
