根据论文，重新更改MCRave引擎的架构，而且通过测试，具有一定的棋力；更改树节点的结构，添加了是否是完全展开节点的选项，如果节点是完全展开的，说明该节点所有状态都被搜索到，因此不进行搜索。算法还需要进一步进行验证程序的健壮性。

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -78,6 +78,19 @@
      <string>清空信息</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnStopAI">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>260</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>终止AI计算</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QMenuBar" name="menuBar">
